// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`withLayout is rendered correctly 1`] = `
<ContextProvider
  value={
    Object {
      "isOpen": false,
      "toggleOpen": [Function],
    }
  }
>
  <WithStyles(Connect(Header)) />
  <div
    style={
      Object {
        "display": "flex",
        "paddingTop": "50px",
      }
    }
  >
    <WithStyles(Connect(VerticalNavigation)) />
    <main
      style={
        Object {
          "flexGrow": 1,
          "padding": "30px 15px 0 15px",
        }
      }
    >
      <Component />
    </main>
  </div>
</ContextProvider>
`;

exports[`withLayout is rendered correctly 2`] = `
<ContextProvider
  value={
    Object {
      "isOpen": false,
      "toggleOpen": [Function],
    }
  }
>
  <WithStyles(Connect(Header)) />
  <div
    style={
      Object {
        "display": "flex",
        "paddingTop": "50px",
      }
    }
  >
    <WithStyles(Connect(VerticalNavigation)) />
    <main
      style={
        Object {
          "flexGrow": 1,
          "padding": "30px 15px 0 15px",
        }
      }
    >
      <Component />
    </main>
  </div>
  <WithStyles(Footer) />
</ContextProvider>
`;
